--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p{
   padding-top: 140px;
 }
 
-.btn{
+#btn{
   background-color: blue;
   border-color: blue;
   color: white;
@@ -57,19 +57,4 @@ p{
   border-radius: 30px;
   padding-left: 10px;
   padding-right: 10px;
-}
-
-.btn-a{
-  background-color: white;
-  border-color: white;
-  color: black;
-  height: 50px;
-  border-radius: 30px;
-  padding-left: 10px;
-  padding-right: 10px;
-  display: none;
-}
-
-.lamp-accesa{
-  display: none;
 }
